--- a/styles/style.css
+++ b/styles/style.css
@@ -136,9 +136,10 @@ nav {
     width: 650px;
     height: 570px;
     top: 0;
-    left: 630px;
+    right: 0;
     background-image: url(https://c.animaapp.com/TG9vkPsy/img/yellow-bg.svg);
     background-size: 100% 100%;
+    transform: translateX(2%);
 }
 
 
